src/test/ui/type-alias-impl-trait/issue-76202-trait-impl-for-tait.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-76202-trait-impl-for-tait.rs:6:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: cannot implement trait on type alias impl trait
  --> $DIR/issue-76202-trait-impl-for-tait.rs:19:1
   |
LL | impl Test for F {
   | ^^^^^^^^^^^^^^^
   |
note: type alias impl trait defined here
  --> $DIR/issue-76202-trait-impl-for-tait.rs:12:10
   |
LL | type F = impl Dummy;
   |          ^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

